--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.2",
     "i": "^0.3.6",
     "node-sass": "^4.11.0",
     "npm": "^6.7.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3"
+    "react-router": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
